post by date and page under construction

--- a/assets/css/dw-timeline-pro-flat.css
+++ b/assets/css/dw-timeline-pro-flat.css
@@ -9675,7 +9675,7 @@ textarea {
   }
 }
 .post-nav {
-  display: none;
+  //display: none;
 }
 /* ==========================================================================
    Hentry
