--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -2,7 +2,7 @@
 	Layout
 	========================================================================== */
 .wrap {
-	background: grey !important;
+	background: @body-bg;
 }
 
 .main {
@@ -43,7 +43,8 @@
 			left: 0;
 			bottom: 0;
 			position: absolute;
-			background: @brand-info;
+			background: black;
+      
 		}
 	}
 
