--- a/assets/less/flat/variables.less
+++ b/assets/less/flat/variables.less
@@ -18,7 +18,7 @@
 // Scaffolding
 // -------------------------
 
-@body-bg: 							#3a3a3a;
+@body-bg: 							black;
 @text-color:            @gray-light;
 
 // Links
