menu loading and scrolling active

--- a/assets/less/flat/timeline.less
+++ b/assets/less/flat/timeline.less
@@ -8,6 +8,14 @@
    .hidden();
 }
 
+.hidden-separate{
+   height: 0px;
+   margin: 0!important;;
+   padding: 0!important;;
+
+   span{ display: none !important; }
+}
+
 // Scrubber
 // ============================
 .timeline-scrubber {
