change style fond plus svg

--- a/assets/less/flat/flat.less
+++ b/assets/less/flat/flat.less
@@ -1,5 +1,25 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:700,400);
+// @import url(http://fonts.googleapis.com/css?family=Raleway:700,400);
 @import url(http://fonts.googleapis.com/css?family=Noto+Serif:400,700);
+// 
+@font-face {
+	font-family: 'Code-Pro-Light';
+	src: url('../fonts/sourcecodepro-regular-webfont.eot');
+	src: url('../fonts/sourcecodepro-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/sourcecodepro-regular-webfont.woff') format('woff'),
+		 url('../fonts/sourcecodepro-regular-webfont.ttf') format('truetype');
+	font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+	font-family: 'Code-Pro-Light';
+	src: url('../fonts/sourcecpl-webfont.eot');
+	src: url('../fonts/sourcecpl-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/sourcecpl-webfont.woff') format('woff'),
+		 url('../fonts/sourcecpl-webfont.ttf') format('truetype');
+	font-weight: normal;
+  font-style: normal;
+}
 
 // @import "font-awesome/font-awesome.less";
 @import "../bootstrap/variables.less";
