--- a/assets/less/flat/mixins.less
+++ b/assets/less/flat/mixins.less
@@ -35,3 +35,10 @@
     background-color: #fff;
   }
 }
+
+.bg{
+  background-image: url("../img/fond.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-attachment: fixed;
+}
