--- a/assets/less/flat/variables.less
+++ b/assets/less/flat/variables.less
@@ -19,6 +19,7 @@
 // -------------------------
 
 @body-bg: 							black;
+@header-bg: 						transparent;
 @text-color:            @gray-light;
 
 // Links
@@ -31,7 +32,7 @@
 // -------------------------
 
 @font-family-sans-serif: 		'Noto Serif', serif;
-@headings-font-family:  		'Raleway', sans-serif;
+@headings-font-family:  		'Code-Pro-Light', sans-serif;
 @headings-font-weight: 			700;
 
 // Components
