--- a/assets/less/flat/timeline.less
+++ b/assets/less/flat/timeline.less
@@ -150,8 +150,8 @@
       text-transform: uppercase;
       font-family: @headings-font-family;
       display: inline-block;
-      background: #3e5771;
-      border: 1px solid rgba(255, 255, 255, 0.2);
+      .bg;
+      border: 1px solid rgba(255, 255, 255, 0.8);
       color: #fff;
       font-weight: 700;
       border-radius: @border-radius-small;
@@ -170,9 +170,9 @@
       top: 0;
       left: 50%;
       margin-left: -1px;
-      width: 2px;
+      width: 1px;
       height: 100%;
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.8);
       content: '';
    }
 
@@ -199,9 +199,9 @@
          top: 0; 
          width: 12px;
          height: 12px;
-         border: 3px solid #3e5771;
+         border: 2px solid #fff;
          border-radius: 50%;
-         background: rgba(255, 255, 255, 0.8);
+        .bg;
          content: '';
       }
    }
@@ -433,9 +433,9 @@
    padding: 0;
    width: 120px;
    height: 32px;
-   border: 1px solid rgba(255, 255, 255, 0.2); 
+   border: 1px solid white; 
    border-radius: @border-radius-small;
-   background: #3e5771;
+   .bg;
    color: #fff;
    text-align: center;
    text-transform: uppercase;
