--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -1,6 +1,7 @@
 /* ==========================================================================
 	Layout
 	========================================================================== */
+
 body{
   .bg;
 }
@@ -63,7 +64,7 @@ body{
     // top: 50%;
     // left: 50%;
     width: 100%;
-    margin-top: 30px;
+    padding-top: 30px;
     // .translate(-50%,-50%);
   }
 	
@@ -103,7 +104,7 @@ body{
     border-bottom: 1px solid rgba(250,250,250,0.8);
     margin-bottom: 0;
 
-    .home & {
+    .home &{
       margin-top: -5px;
       // font-size: 80px;
       // border: 1px solid rgba(255,255,255,.25);
@@ -222,10 +223,17 @@ body{
   }
 
   .viking{
+    display: none;
     position: relative;
     z-index: 1;
+    
+    .home &{
+      display: block;
+    }
+    
     img{
-      max-width: 30vw;
+      max-width: 400px;
+      width: 30vw;
     }
   }
 }
@@ -259,7 +267,7 @@ body{
   }
 
   .main-sidebar-open & {
-    .translate(260px, 0);;
+    .translate(260px, 0);
     .icon-bar {
       position: relative;
     }
@@ -338,20 +346,25 @@ body{
   }
 
   body {
-    background: #222;
+    // background: #222;
   }
 
   .wrap {
-    position: relative;
-    .translate(260px, 0);
+    // position: relative;
+    // .translate(260px, 0);
 
     &:before {
-      position: absolute;
-      z-index: 9999;
-      content: '';
-      .square(100%);
+      // position: absolute;
+      // z-index: 9999;
+      // content: '';
+      // .square(100%);
     }
   }
+
+  .sidebar-primary{
+    .translate(100%, 0);    
+  }
+
   .nav-main {
     .translate(260px, 0);    
   }
@@ -731,14 +744,16 @@ body{
 	Sidebar
 	========================================================================== */
 .sidebar-primary {
+  position: fixed;
   top: 0;
+  left: -260px;
 	width: 260px;
 	height: 100%;
 	background: #222;  
-	z-index: -1;
+	z-index: 20;
 	color: rgba(255, 255, 255, 0.3); 
 	font-family: @headings-font-family;
-	.transition( opacity 0s .3s );
+	.transition( .3s );
 
   .admin-bar & {
     top: 46px;
@@ -752,8 +767,8 @@ body{
 	}
 
 	.main-sidebar-open & {
-		z-index: 0;
-		.transition(0);
+		// z-index: 0;
+		// .transition(0);
 	}
 
 	a {
