font and post minifying

--- a/assets/less/flat/flat.less
+++ b/assets/less/flat/flat.less
@@ -1,6 +1,6 @@
-// @import url(http://fonts.googleapis.com/css?family=Raleway:700,400);
-@import url(http://fonts.googleapis.com/css?family=Noto+Serif:400,700);
-// 
+@import url(http://fonts.googleapis.com/css?family=Raleway:700,400);
+@import url(http://fonts.googleapis.com/css?family=Poiret+One);
+
 @font-face {
 	font-family: 'Code-Pro-Light';
 	src: url('../fonts/sourcecodepro-regular-webfont.eot');
@@ -8,7 +8,7 @@
 		 url('../fonts/sourcecodepro-regular-webfont.woff') format('woff'),
 		 url('../fonts/sourcecodepro-regular-webfont.ttf') format('truetype');
 	font-weight: bold;
-    font-style: normal;
+  font-style: normal;
 }
 
 @font-face {
