--- a/assets/less/flat/timeline.less
+++ b/assets/less/flat/timeline.less
@@ -145,7 +145,8 @@
 
    span {
       padding: 10px 40px;
-      font-size: 11px;
+      font-size: 14px;
+      letter-spacing: 1px;
       line-height: 10px;
       text-transform: uppercase;
       font-family: @headings-font-family;
