--- a/assets/less/flat/variables.less
+++ b/assets/less/flat/variables.less
@@ -31,8 +31,8 @@
 // Typography
 // -------------------------
 
-@font-family-sans-serif: 		'Noto Serif', serif;
-@headings-font-family:  		'Code-Pro-Light', sans-serif;
+@font-family-sans-serif: 		'Raleway', sans-serif;
+@headings-font-family:  		'Poiret One', sans-serif;
 @headings-font-weight: 			700;
 
 // Components
