--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -2,8 +2,15 @@
 	Layout
 	========================================================================== */
 
-body{
+body:before{
+  content: '';
+  position: fixed;
+  width: 100%;
+  height: 100%;
   .bg;
+  opacity: 1;
+  .transition(opacity .2s);
+  background-origin: content-box;
 }
 
 .wrap {
@@ -345,8 +352,8 @@ body{
     height: auto;
   }
 
-  body {
-    // background: #222;
+  &:before{
+    opacity: 0.2;
   }
 
   .wrap {
