gallery ok on thumbnail

--- a/assets/less/flat/flat.less
+++ b/assets/less/flat/flat.less
@@ -75,7 +75,7 @@
 
 // Vendor
 @import "../vendor/prettify.less"; 
-@import "../vendor/nivo-lightbox.less";
+@import "../vendor/fotorama.less";
 
 // DW Timline
 @import "theme.less"; // Bootstrap + WordPress Elements Overide
