--- a/assets/less/flat/theme.less
+++ b/assets/less/flat/theme.less
@@ -284,13 +284,13 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    ========================================================================== */
 .btn {
    outline: none !important;
-   font-family: @headings-font-family;
+   // font-family: @headings-font-family;
    text-transform: uppercase;
    font-size: 11px;
 }
 
 .btn-xs {
-   font-size: 9px;
+   font-size: 10px;
    padding-top: 2px;
 }
  
