--- a/assets/less/flat/variables.less
+++ b/assets/less/flat/variables.less
@@ -25,7 +25,7 @@
 // Links
 // -------------------------
 
-@link-color:            @gray-dark;
+@link-color:            @gray-light;
 @link-hover-color:      @brand-info;
 
 // Typography
