--- a/assets/less/bootstrap/buttons.less
+++ b/assets/less/bootstrap/buttons.less
@@ -10,6 +10,7 @@
   display: inline-block;
   margin-bottom: 0; // For input.btn
   font-weight: @btn-font-weight;
+  // font-family: @font-family-sans-serif;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
