--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -2,20 +2,13 @@
 	Layout
 	========================================================================== */
 
-body:before{
-  content: '';
-  position: fixed;
-  width: 100%;
-  height: 100%;
+body{
   .bg;
-  opacity: 1;
-  .transition(opacity .2s);
-  background-origin: content-box;
 }
 
 .wrap {
 	// background: @body-bg;
-  background-image: url("../img/point.png"); 
+  // background-image: url("../img/point.png"); 
 }
 
 .main {
