entry meta popup

--- a/assets/less/flat/flat.less
+++ b/assets/less/flat/flat.less
@@ -76,6 +76,7 @@
 // Vendor
 @import "../vendor/prettify.less"; 
 @import "../vendor/fotorama.less";
+@import "../vendor/magnific-popup.less";
 
 // DW Timline
 @import "theme.less"; // Bootstrap + WordPress Elements Overide
