--- a/assets/less/flat/hentry.less
+++ b/assets/less/flat/hentry.less
@@ -3,10 +3,20 @@
    ========================================================================== */
 
 .hentry {
-   /*header *{
+   header *{
       display: inline-block;
-      vertical-align: bottom;
-   }*/
+      vertical-align: baseline;
+
+      &:first-child{
+         margin-right: 5px;
+      }
+   }
+
+   .entry-infos{
+      >*{
+         margin-right: 10px;
+      }
+   }
 
    .entry-thumbnail {
       margin: 0 0 15px;
@@ -30,6 +40,11 @@
       @media(max-width: @screen-xs-max){
          padding: 20px 20px 0;
          margin: 0 0 20px;
+      }
+
+       > *:last-child{
+         margin-bottom: 0;
+         padding-bottom: 30px;
       }
    }
 
@@ -85,7 +100,7 @@
 
    .entry-content,
    .entry-summary {
-      padding: 0 0 20px;
+      // padding: 0 0 20px;
       .clearfix();
 
       .carousel {
