update new server

--- a/assets/less/flat/flat.less
+++ b/assets/less/flat/flat.less
@@ -21,7 +21,7 @@
   font-style: normal;
 }
 
-// @import "font-awesome/font-awesome.less";
+// @import "../vendor/font-awesome.less";
 @import "../bootstrap/variables.less";
 @import "variables.less";
 @import "../bootstrap/mixins.less";
