--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -262,9 +262,9 @@ body{
     }
   }
 
-  @media(max-width: 1023px) {
-    opacity: .3;
-  }
+  // @media(max-width: 1023px) {
+  //   opacity: .3;
+  // }
 
   .main-sidebar-open & {
     .translate(260px, 0);
