--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -26,7 +26,7 @@ body{
 	text-align: center;
 
 	&.cover {
-		// min-height: 330px;
+		min-height: 330px;
 		background-size: cover;
 		background-position: center;
 		height: 100%;
