year bug + map + gallery

--- a/assets/less/flat/hentry.less
+++ b/assets/less/flat/hentry.less
@@ -14,7 +14,9 @@
 
    .entry-infos{
       >*{
-         margin-right: 10px;
+         display: inline-block;
+         vertical-align: baseline;
+         margin-right: 15px;
       }
    }
 
@@ -133,7 +135,7 @@
       }
    }
 
-   .more-link {
+   .more-link, .gallery-link{
       display: block;
       clear: both;
       margin: 10px 0 0;
