extern ajax gallery and fotorama fullscreen

--- a/assets/less/flat/hentry.less
+++ b/assets/less/flat/hentry.less
@@ -308,6 +308,10 @@ p .quote-box {
 
 .single {
 
+   .hentry header > *{
+      display: block;
+   }
+
    .entry-comments{
       display: none;
    }
