--- a/assets/less/flat/mixins.less
+++ b/assets/less/flat/mixins.less
@@ -42,3 +42,7 @@
   background-position: bottom center;
   background-attachment: fixed;
 }
+
+.rgbaColorIn(@color, @opacity : 1){
+  @result: rgba( red(@color), green(@color), blue(@color), @opacity );
+}
