some correction ajax etc

--- a/assets/less/flat/flat.less
+++ b/assets/less/flat/flat.less
@@ -83,3 +83,4 @@
 @import "layout.less"; // Main Layout
 @import "timeline.less"; // Timeline
 @import "hentry.less"; // Posts + Pages + Comments 
+@import "shame.less"; // Posts + Pages + Comments 
