--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -930,7 +930,7 @@ body{
 		}
 	}
 
-  .active + .children {
+  .active + .children{
     max-height: 1000px;
     .transition(max-height 2s);
   }
@@ -1021,7 +1021,7 @@ body{
 		}
 	}
 
-  .active + .sub-menu {
+  .active ~ .sub-menu {
     max-height: 1000px;
     .transition(max-height 2s);
   }
