--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -312,6 +312,15 @@ body{
     background: #fff;
     width: 18px;
   }
+
+  &.nav-bar-home{
+    top: 60px;
+    font-size: 16px;
+    padding: 10px 11px 9px;
+    &:hover{
+      color: white;
+    }
+  }
 }
 
 .nav-main-toggle {
@@ -733,7 +742,11 @@ body{
 /* ==========================================================================
 	Content
 	========================================================================== */
-
+.entry-content, .page-content{
+  a{
+    text-decoration: underline;
+  }
+}
 
 /* ==========================================================================
 	Primary Content
