font on content single page

--- a/assets/less/flat/hentry.less
+++ b/assets/less/flat/hentry.less
@@ -337,10 +337,10 @@ p .quote-box {
    }
 
    .entry-content {
-      font-family: @headings-font-family;
-      font-weight: 300;
-      font-size: @font-size-content;
-      line-height: @line-height-content;
+      // font-family: @headings-font-family;
+      // font-weight: 300;
+      // font-size: @font-size-content;
+      // line-height: @line-height-content;
 
       p {
          position: relative;
@@ -568,10 +568,10 @@ p .quote-box {
    }
 
    .page-content {
-      font-family: @headings-font-family;
-      font-weight: 300;
-      font-size: @font-size-content;
-      line-height: @line-height-content;
+      // font-family: @headings-font-family;
+      // font-weight: 300;
+      // font-size: @font-size-content;
+      // line-height: @line-height-content;
    }
 }
 
