--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -744,7 +744,8 @@ body{
 	========================================================================== */
 .entry-content, .page-content{
   a{
-    text-decoration: underline;
+    font-weight: bold;
+    // text-decoration: underline;
   }
 }
 
