--- a/assets/less/flat/hentry.less
+++ b/assets/less/flat/hentry.less
@@ -15,8 +15,15 @@
    .entry-infos{
       >*{
          display: inline-block;
-         vertical-align: baseline;
+         vertical-align: bottom;
          margin-right: 15px;
+      }
+
+      .country{
+         max-width: 64%;
+         text-overflow: ellipsis;
+         white-space: nowrap;
+         overflow: hidden;
       }
    }
 
