--- a/assets/less/flat/theme.less
+++ b/assets/less/flat/theme.less
@@ -565,6 +565,7 @@ textarea {
    Back to top
    ========================================================================== */
 .scrollup {
+   display: none;
    position: fixed;
    right: 15px;
    bottom: 15px;
