--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -248,7 +248,7 @@ body{
   outline: none !important;
   border-radius: 0;
   background: #111;
-  height: 40px;
+  // height: 40px;
   font-size: 11px;
   font-weight: bold;
   text-transform: uppercase;
@@ -311,15 +311,6 @@ body{
   .icon-bar {
     background: #fff;
     width: 18px;
-  }
-
-  &.nav-bar-home{
-    top: 60px;
-    font-size: 16px;
-    padding: 10px 11px 9px;
-    &:hover{
-      color: white;
-    }
   }
 }
 
