--- a/assets/less/flat/shame.less
+++ b/assets/less/flat/shame.less
@@ -1,3 +1,36 @@
+.acf-map {
+	width: 100%;
+	height: 400px;
+	margin: 20px 0;
+}
+
+.full-content{
+	position: fixed;
+	height: 100vh;
+	width: 100vw;
+	top: 0;
+	left: 0;
+
+	.acf-map{
+		height: 100vh;
+		width: 100vw;
+		margin: 0;
+
+		.marker{
+			display: none;
+		}
+
+		.gm-style-iw{
+			margin-top: 5px;
+		}
+
+		img
+		{
+		    max-width : none;
+		}
+	}
+}
+
 pre{
 	display: none;
 }
