--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -65,6 +65,10 @@ body{
     // left: 50%;
     width: 100%;
     padding-top: 30px;
+
+    h3{
+      display: none;
+    }
     // .translate(-50%,-50%);
   }
 	
