--- a/assets/less/flat/layout.less
+++ b/assets/less/flat/layout.less
@@ -3,6 +3,7 @@
 	========================================================================== */
 
 body{
+  // background: red;
   .bg;
 }
 
@@ -240,6 +241,19 @@ body{
       width: 30vw;
     }
   }
+
+  .share{
+    margin-top: 10px;
+    a{
+      // background-color: white;
+      width: 24px;
+      height: 24px;
+      display: block;
+      padding: 2px;
+      color: white;
+      font-size: @font-size-large;
+    }
+  }
 }
 
 .navbar-toggle { 
@@ -339,6 +353,7 @@ body{
 
 .main-sidebar-open {
   overflow: hidden;
+  overflow-y: auto;
 
   // Fixfox
   @media all and (min--moz-device-pixel-ratio:0) { 
@@ -733,6 +748,49 @@ body{
   }  
 }
 
+// nav horizontal
+header.banner .page-title{
+  border-bottom: none;
+}
+
+.header-nav{
+  display: inline-block;
+  list-style: none;
+  text-align: center;
+  padding: 0;
+  border-top: 1px solid rgba(250, 250, 250, 0.8);
+  border-bottom: 1px solid rgba(250, 250, 250, 0.8);
+  margin: 10px 0;
+
+  li{
+    display: inline-block;
+    vertical-align: middle;
+    list-style: none;
+
+    &:before{
+      display: none;
+    }
+
+    &:first-child a{
+      border-left: 1px solid rgba(250, 250, 250, 0.8);
+    }
+
+    a{
+      padding: 8px 10px;
+      border-right: 1px solid rgba(250, 250, 250, 0.8);
+      margin: 0;
+      color: white;
+
+      i{
+        margin-right: 3px;
+      }
+    }
+  }
+
+  .sub-menu, .fa-caret-right{
+    display: none;
+  }
+}
 
 /* ==========================================================================
 	Content
